--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,5 @@
-
+set-option -g prefix C-a
+set -g mouse on
 set -g default-terminal "screen-256color"
 set-option -g status-position bottom
 set-window-option -g xterm-keys on
@@ -20,9 +21,9 @@ set-option -g message-bg black
 set-option -g message-attr bright
 set -g status-left ' '
 set -g status-justify left
-set -g status-right " "
-setw -g window-status-format         ' #(echo "#{pane_current_command}") '
-setw -g window-status-current-format ' #(echo "#{pane_current_command}") '
+set -g status-right ""
+setw -g window-status-format '#{pane_current_command}❯#(echo "#{pane_current_path}" | rev | cut -d'/' -f-1 | rev) '
+setw -g window-status-current-format '#[fg=blue]#{pane_current_command}#[fg=blue]❯#[fg=red]#(echo "#{pane_current_path}" | rev | cut -d'/' -f-1 | rev) '
 bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"  
 bind -n WheelDownPane select-pane -t= \; send-keys -M
 set-option -g default-command "reattach-to-user-namespace -l zsh"
