Enhance Claude Code configuration and update documentation
- Added Claude Code configuration files and symlinks in bootstrap.sh
- Updated .gitignore to include Claude Code local files
- Added new entries in Brewfile for Python linter (ruff)
- Expanded README with details on Claude Code setup and usage
- Introduced guidelines for Git, Python, and Shell scripting in the Claude rules directory

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,7 @@ zshenv_local.symlink
 local-functions.symlink
 gitconfig.local.symlink
 .idea/*
-.claude/*
+
+# Claude Code local files (personal overrides, not tracked)
+.claude/settings.local.json
+.claude/CLAUDE.local.md
